--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
             android:label="@string/settings_name"></activity>
         <activity
             android:name=".CallActivity"
+            android:launchMode="singleTask"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="fullUser"
@@ -58,6 +59,13 @@
 
         <activity android:name=".RoomActivity"
             android:theme="@style/RoomActivityTheme"></activity>
+
+        <receiver android:name=".receiver.CallReceiver" >
+            <intent-filter>
+                <action android:name="org.appspot.apprtc.service.ACTION_REMOTE_DESCRIPTION" />
+                <action android:name="org.appspot.apprtc.service.ACTION_REMOTE_ICE_CANDIDATE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
