--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.jakewharton:disklrucache:2.0.2'
+    compile 'com.github.clans:fab:1.6.4'
 }
