--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "26.0.1"
 
     sourceSets.main {
         jniLibs.srcDir 'libs'
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 25
 
         versionCode 15663
         versionName "r15663"
@@ -57,11 +57,12 @@ dependencies {
     compile files('libs/base_java.jar')
     compile files('libs/libjingle_peerconnection.jar')
     compile project(':sharedresourceslib')
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
-    compile 'com.makeramen:roundedimageview:2.2.0'
+    compile 'com.makeramen:roundedimageview:2.3.0'
+    compile 'com.amitshekhar.android:android-networking:1.0.0'
 }
